Fixes for Bug 3665 (EULA titlebar/scrollbar), Bug 548 (browser scrollbars), Bug 5427 (bottom tabs), Bug 5597 (stoprefresh naming) - reviewers include ian, komi, koshi
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@7108 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/app/skin/global/nativescrollbars.css
+++ b/app/skin/global/nativescrollbars.css
@@ -37,83 +37,12 @@
  * ***** END LICENSE BLOCK ***** */
 
 /* ===== nativescrollbars.css ===========================================
-  == Styles used by native scrollbar-related elements.
+  == Styles used by native scrollbar-related elements on OS X.
   ======================================================================= */
 
-@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
-@namespace html url("http://www.w3.org/1999/xhtml");
+/* Import the basic XUL scrollbars look */    
+@import url("chrome://songbird-global/skin/scrollbars.css");
 
-/* ::::: scrollbar ::::: */
 
-scrollbar {
-  -moz-appearance: scrollbar;
-  -moz-binding: url(chrome://global/content/bindings/scrollbar.xml#scrollbar);
-  cursor: default;
-  background-color: white;
-}
-
-html|select[size]:not([size="0"]):not([size="1"]) > scrollbar,
-html|select[multiple] > scrollbar {
-  -moz-appearance: scrollbar-small;
-}
-
-/* ..... track ..... */
-
-slider {
-  -moz-appearance: scrollbartrack-vertical;
-}
-
-slider[orient="horizontal"] {
-  -moz-appearance: scrollbartrack-horizontal;
-}
-
-/* ..... thumb ..... */
-
-thumb {
-  -moz-appearance: scrollbarthumb-vertical;
-}
-
-thumb[orient="horizontal"] {
-  -moz-appearance: scrollbarthumb-horizontal;
-}
-
-/* ..... increment ..... */
-
-scrollbarbutton[type="increment"] {
-  -moz-appearance: scrollbarbutton-right;
-}
-
-scrollbar[orient="vertical"] > scrollbarbutton[type="increment"] {
-  -moz-appearance: scrollbarbutton-down;
-}
-
-/* ..... decrement ..... */
-
-scrollbarbutton[type="decrement"] {
-  -moz-appearance: scrollbarbutton-left;
-}
-
-scrollbar[orient="vertical"] > scrollbarbutton[type="decrement"] {
-  -moz-appearance: scrollbarbutton-up;
-}
-
-/* ::::: square at the corner of two scrollbars ::::: */
-
-scrollcorner {
-  /* XXX -moz-appearance: scrollcorner; */
-  -moz-binding: url(chrome://global/content/bindings/scrollbar.xml#scrollbar-base);
-  width: 16px;
-  cursor: default;
-  background-color: white;
-}
-
-/* :::::::::::::::::::::::::::::::::::::::::::::::::::::::: */
-/* ::::::::::::::::::::: MEDIA PRINT :::::::::::::::::::::: */
-/* :::::::::::::::::::::::::::::::::::::::::::::::::::::::: */
-@media print {
-  html|div scrollbar {
-    -moz-appearance: scrollbar;
-    -moz-binding: url(chrome://global/content/bindings/scrollbar.xml#scrollbar);
-    cursor: default;
-  }
-}
+/* Import the current feathers */    
+@import url("chrome://songbird/skin/globalImport.css");
