--- a/app/skin/global/tabbox.css
+++ b/app/skin/global/tabbox.css
@@ -2,6 +2,11 @@
 
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 
+
+
+/** TODO: Completely replace this mess! **/
+
+
 /*** TAB: TOP <tab> ***/
 
 tab,
@@ -41,6 +46,7 @@ tab[selected="true"] > hbox > label.tab-text
 tabs {
   padding			: 0px;
   margin-bottom: -2px;
+  border-bottom: 1px solid #797f76;
 }
 
 
@@ -56,12 +62,21 @@ tabs {
 
 .tab-bottom {
 	margin-bottom: 2px;
+  margin-top: 0px;
+  -moz-border-radius: 0px 0px 5px 5px !important;
+}
+
+.tab-bottom[selected="true"] {
+  margin-top: -1px;
+}
+
+
+tab.tabs-bottom {
+  padding			: 0px;
 }
 
 
 .tab-bottom > .tab-image-middle {
-  -moz-border-top-colors: #FFFFFF #CECECE #000000;
-  -moz-border-bottom-colors: #000000 #CECECE #DEDEDE;
 }
 
 .tab-bottom > .tab-image-middle > .tab-text {
@@ -73,8 +88,6 @@ tabs {
 
 .tab-bottom:hover:active > .tab-image-middle { 
   background-color: #666666;
-  -moz-border-top-colors: #FFFFFF #CCCCCC #000000;
-  -moz-border-bottom-colors: #000000 #444444 #555555;
 }
 
 
@@ -82,15 +95,12 @@ tabs {
 .tab-bottom[selected="true"] > .tab-image-middle,
 .tab-bottom:hover:active[selected="true"] > .tab-image-middle { 
   background-color: #EEEEEE;
-  -moz-border-top-colors: #EEEEEE;
-  -moz-border-bottom-colors: #000000 #CCCCCC #FFFFFF;
 }
 
 .tabs-bottom > .tab-border-top-left {
   background-color  : #DEDEDE;
   border-bottom     : 0px;
   border-top        : 3px solid;
-  -moz-border-top-colors: #FFFFFF #CECECE #000000;
   width				: 3px;
 }
 
@@ -98,14 +108,12 @@ tabs {
   background-color  : #DEDEDE;
   border-bottom     : 0px;
   border-top        : 3px solid;
-  -moz-border-top-colors: #FFFFFF #CECECE #000000;
 }
 
 .tabs-bottom > .tab-border-top-left-cap, .tabs-bottom > .tab-border-top-right-cap {
  background-color  : #DEDEDE;
   border-bottom     : 0px;
   border-top        : 3px solid;
-  -moz-border-top-colors: #000000;
   width				: 1px;
 }
 
@@ -121,7 +129,7 @@ tabbox[orient="vertical"] tabpanels + tabs[orient="horizontal"] tab {
   border-bottom: 1px solid blue;
   border-left: 1px solid white;
   border-right: 1px solid #666666;
-  -moz-border-radius: 0px 0px 8px 8px;
+  -moz-border-radius: 0px 0px 5px 5px !important;
   padding: 1px 5px 3px 5px;
   margin: 1px 2px 1px 2px;
 }
@@ -159,7 +167,6 @@ tabpanels.light {
 tabpanels {
   -moz-appearance: tabpanels; 
   padding: 15px 5px 5px 5px;
-  border-top: 1px outset white;  
   background-color		: transparent;
   margin-bottom: 10px;
 }
@@ -177,32 +184,52 @@ tabstrip-box {
 	-moz-box-flex: 0 !important;
 }
 
-tab:not([selected="true"]),
 .tabbrowser-tab:not([selected="true"]) {
-  -moz-background-clip: padding !important;
-  background-color: #313131;
+  margin-bottom: 1px;
 }
-tab:hover:not([selected="true"]),
 .tabbrowser-tab:hover:not([selected="true"]) {
-  -moz-border-radius-topright: 5px !important;
-  -moz-border-radius-topleft: 5px !important;
-  -moz-background-clip: padding !important;
-  background-color: #313131;
+  margin-bottom: 1px;
 }
-tab[selected="true"],
 .tabbrowser-tab[selected="true"] {
   -moz-user-focus: normal;
-  -moz-border-radius-topright: 5px !important;
-  -moz-border-radius-topleft: 5px !important;
-  -moz-background-clip: padding !important;
-  background-color: #313131;
+  margin-top: 2px;
 }
+
+tab:not([selected="true"]) {
+  margin-bottom: 0px;
+}
+tab:hover:not([selected="true"]) {
+  margin-bottom: 0px;
+}
+tab[selected="true"] {
+  -moz-user-focus: normal;
+  margin-top: 2px;
+  margin-bottom: -1px;
+}
+
+.tab-bottom:not([selected="true"]) {
+  margin-top: 0px;
+}
+.tab-bottom:hover:not([selected="true"]) {
+  margin-top: 0px;
+}
+.tab-bottom[selected="true"] {
+  margin-top: -1px;
+  margin-bottom: 0px;
+}
+
 
 /** The bar between the tabs and the tab panels.  Note that the background is positioned
     so that the tab gradient blends with the bar gradient **/
 .tabs-bottom {
   border-top: 1px solid #797f76 !important;
+  border-bottom: 0px !important;  
   background-color: #313131;
   height: 3px !important;
   margin: 0px !important;
+}
+
+.tabbrowser-tabs {
+  margin-bottom: -2px;
+  border-bottom: 0px !important;  
 }
